# CW5

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: HH_API.py  api_hh.py  create_db.py  db_manager.py  dbmanager.py  hh_api.py  main.py  utils.py
tests/: database_test.ini  test_HH_API.py  test_dbmanager.py  test_utils.py
