[tool.poetry]
name = "сw6"
version = "0.1.0"
description = ""
authors = ["VsevolodLunev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.143.0"
requests = "^2.32.3"
pytest = "^8.3.3"
configparser = "^7.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
